# xmate3_robot

./: CHANGELOG.md  CMakeLists.txt  README_CN.md  quick_start.md
examples/: CMakeLists.txt  Untitled Document  arpose_grasp_demo.cpp  cartesian_impedance_move.cpp  cartesian_nullspace_move.cpp  cartesian_position_move.cpp  cartesian_rotation_move.cpp  cartesian_s_line.cpp  cartesian_s_line_mu.cpp  io_test.cpp  joint_impedance_move.cpp  joint_position_move.cpp  joint_s.cpp  joint_s_mu.cpp  move_test.cpp  ros.cpp  test.cpp  torque_control.cpp
examples/backup/: grasp_demo.cpp
examples/backup/20200903/: grasp_demo.cpp
examples/backup/20200904/: grasp_demo.cpp
examples/backup/20200905/: arpose_grasp_demo.cpp  pubsh_grasp_demo.cpp
examples/backup/20200906/: arpose_grasp_demo.cpp
